@@ -79,6 +79,9 @@ General Keyboard Shortcuts:
  Key F12						-	Toggle display of FPS
  Key Up, Down, Left or Right	-	Move on the map
 
+ Key H							-	Cycle through construction yards
+ Key F							-	Cycle through factories/other builders
+
  Key F5							-	Skip 30 seconds (only in singleplayer)
  Key F6							-	Skip 2 minutes (only in singleplayer)
  Key -							-	Decrease gamespeed (only in singleplayer)
